Fixed the bundle alignment from desktop upwards.

--- a/assets/pages/bundles-landing/bundlesLanding.scss
+++ b/assets/pages/bundles-landing/bundlesLanding.scss
@@ -138,16 +138,22 @@
 
     .bundles__content {
       background-color: gu-colour(comment-support-2);
-      padding-bottom: $gu-v-spacing * 2;
+      padding: 0 0 ($gu-v-spacing * 2);
+    }
+
+    .bundles__wrapper {
+      width: 960px;
+      margin: 0 auto;
     }
 
     .bundles__bundle {
-      width: 300px;
+      width: 280px;
       height: 400px;
       padding: 8px 10px 12px;
       display: inline-block;
       vertical-align: top;
       position: relative;
+      margin: 0 ($gu-h-spacing / 2);
     }
 
     .component-cta-link {
